@@ -1,3 +1,7 @@
+2004-03-30  Stan Shebs  <shebs@apple.com>
+
+	* gas/macros/macros.exp: Remove mention of MPW config.
+
 2004-03-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* gas/i860/dir-intel03-err.l: Update for junk at end line becoming
