@@ -1,3 +1,10 @@
+2004-03-30  Stan Shebs  <shebs@apple.com>
+
+	Remove long-obsolete MPW support.
+	* mpw-config.in, mpw-make.sed, mac-as.r: Remove files.
+	* configure.in: Remove mention of ppc-*-mpw* config.
+	* configure.in: Likewise.
+
 2004-03-30  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-arm.c (meabi_flags): Make its use conditional upon
